--- a/styles.css
+++ b/styles.css
@@ -7,8 +7,14 @@
   
   body {
     font-family: 'Arial', sans-serif;
-    background: linear-gradient(135deg, #6a11cb, #2575fc);
-    color: #fff;
+    background: linear-gradient(135deg, #24ff86, #09501e);
+    background-image: url(./img/logo\ md_oficial.png);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    margin: 0;
+    height: 100vh;
+    color: #053155;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -19,7 +25,7 @@
   .container {
     max-width: 800px;
     width: 100%;
-    background: rgba(255, 255, 255, 0.1);
+    background: rgba(73, 70, 70, 0.541);
     border-radius: 15px;
     backdrop-filter: blur(10px);
     box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
@@ -77,7 +83,7 @@
   }
   
   .btn:hover {
-    background: #6a11cb;
+    background: #003fb4;
     transform: translateY(-3px);
   }
   
